--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
