--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -151,8 +151,10 @@
       </button>
 
       <div class="dropdown-menu dropdown-primary">
-        <button class="dropdown-item text-dark" href="#">Pencarian Daftar Rekening</button>
-        <button class="dropdown-item text-dark" href="#">Bar Sheet Rekening</button>
+        <button class="dropdown-item text-dark" [routerLink]="['/rekening/pencariandaftarrekening']">Pencarian Daftar
+          Rekening</button>
+        <button class="dropdown-item text-dark" [routerLink]="['/rekening/pencarianbarsheetrekening']">Bar Sheet
+          Rekening</button>
       </div>
     </div>
 
