--- a/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
+++ b/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
@@ -186,9 +186,7 @@
     </div>
     <!--/.Content-->
   </div>
-  <<<<<<< HEAD </div> <!--Bagian modal untuk validasi transaksi-->
-    =======
-    <!--Bagian modal untuk validasi transaksi-->
+</div>
+<!--Bagian modal untuk validasi transaksi-->
 
-    <div id="testing">test</div>
-    >>>>>>> 1d68c0628ddef82b0e9feccdb73354e41aa4fc2e
+<!--Bagian modal untuk validasi transaksi-->
