--- a/src/app/header/header-home/header-home.component.css
+++ b/src/app/header/header-home/header-home.component.css
@@ -129,12 +129,20 @@ button.dropdown-toggle.waves-light::before {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to right top, #234a7b, #00597d, #006573, #176e63, #487455);
+  /* background-image: linear-gradient(to right top, #234a7b, #00597d, #006573, #176e63, #487455); */
+  background-image: linear-gradient(to right top, #17375e, #193a63, #1b3e69, #1e416e, #204574, #224d7f, #245589, #255d94, #246ca7, #217cb9, #198ccc, #059cde);
   z-index: -1;
   transition: transform 0.5s;
   transform-origin: 0 0;
   transition-timing-function: cubic-bezier(0.02, 1.16, 0.58, 1);
   border-radius: 5px;
+}
+
+button.dropdown-toggle.waves-light[_ngcontent-c1]:active {
+  color: #fff;
+  box-shadow: 0 0px rgb(122, 122, 122);
+  top: 2px;
+  background-color: #234a7b;
 }
 
 button.dropdown-toggle.waves-light.btn-shift::before {
@@ -148,8 +156,65 @@ button.dropdown-toggle.waves-light.btn-shift:hover::before {
 }
 
 
-
 button.btn-linear:hover {
   background: linear-gradient(to top right, #234a7b -15%, #ff0000 102%);
 
 }
+
+.dropdown-item {
+  transition: 0.3s;
+}
+
+.dropdown-item:hover {
+  background-color: #a3c8ec;
+  color: rgb(175, 175, 175);
+}
+
+/* BUTTON 5 */
+/* .btn-5 {
+  overflow: hidden;
+}
+
+.btn-5::after { */
+/*background-color: #f00;*/
+/* height: 100%;
+  left: -35%;
+  top: 0;
+  transform: skew(50deg);
+  transition-duration: 0.6s;
+  transform-origin: top left;
+  width: 0;
+}
+
+.btn-5:hover:after {
+  height: 100%;
+  width: 135%;
+} */
+
+/* GENERAL BUTTON STYLING */
+/* button.btn-5,
+button.btn-5::after {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+button.btn-5 {
+  background: none;
+  border: 3px solid #fff;
+  color: #fff;
+  display: block;
+  text-transform: uppercase;
+}
+
+button.btn-5::before,
+button.btn-5::after {
+  background: #fff;
+  content: '';
+  z-index: -1;
+}
+
+button.btn-5:hover {
+  color: #2ecc71;
+} */
