--- a/src/app/test/pagination2/pagination2.component.html
+++ b/src/app/test/pagination2/pagination2.component.html
@@ -10,7 +10,7 @@
 
             <!-- Tabel dan pagination dimulai dari sini -->
 
-            <mat-form-field>
+            <!-- <mat-form-field>
               List length:
               <input matInput [(ngModel)]="length">
             </mat-form-field>
@@ -22,18 +22,20 @@
             <mat-form-field>
               Page size options:
               <input matInput [ngModel]="pageSizeOptions" (ngModelChange)="setPageSizeOptions($event)">
-            </mat-form-field>
+            </mat-form-field> -->
 
-            <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" (page)="pageEvent = $event">
+            <mat-paginator [length]="length" 
+                            [pageSize]="pageSize" 
+                            [pageSizeOptions]="pageSizeOptions" 
+                            (page)="paginationEvent($event)">
             </mat-paginator>
 
             <div *ngIf="pageEvent">
               <h5>Page Change Event Properties</h5>
-              <div>List length: {{pageEvent.length}}</div>
+              <div>Size Record : {{pageEvent.length}}</div>
               <div>Page size: {{pageEvent.pageSize}}</div>
               <div>Page index: {{pageEvent.pageIndex}}</div>
             </div>
-
 
             <!-- tabel dan pagination -->
           </mdb-card-body>
