--- a/src/app/test/pagination/pagination.component.html
+++ b/src/app/test/pagination/pagination.component.html
@@ -21,32 +21,31 @@
 
               <div class="example-table-container">
 
-                <table mat-table [dataSource]="data" class="example-table" matSort matSortActive="created"
-                  matSortDisableClear matSortDirection="desc">
+                <table mat-table [dataSource]="dataSource">
                   <!-- Number Column -->
-                  <ng-container matColumnDef="number">
-                    <th mat-header-cell *matHeaderCellDef>#</th>
-                    <td mat-cell *matCellDef="let row">{{row.number}}</td>
-                  </ng-container>
-
                   <!-- Title Column -->
-                  <ng-container matColumnDef="title">
-                    <th mat-header-cell *matHeaderCellDef>Title</th>
-                    <td mat-cell *matCellDef="let row">{{row.title}}</td>
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>name</th>
+                    <td mat-cell *matCellDef="let row">{{row.name}}</td>
                   </ng-container>
 
                   <!-- State Column -->
-                  <ng-container matColumnDef="state">
-                    <th mat-header-cell *matHeaderCellDef>State</th>
-                    <td mat-cell *matCellDef="let row">{{row.state}}</td>
+                  <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef>email</th>
+                    <td mat-cell *matCellDef="let row">{{row.email}}</td>
                   </ng-container>
 
+                  <ng-container matColumnDef="id">
+                      <th mat-header-cell *matHeaderCellDef>id</th>
+                      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+                    </ng-container>
+
                   <!-- Created Column -->
-                  <ng-container matColumnDef="created">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-                      Created
+                  <ng-container matColumnDef="body">
+                    <th mat-header-cell *matHeaderCellDef>
+                        body 
                     </th>
-                    <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+                    <td mat-cell *matCellDef="let row">{{row.body}}</td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -55,7 +54,11 @@
                 </table>
               </div>
 
-              <mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
+              <mat-paginator [length]="length" 
+                            [pageSize]="pageSize" 
+                            [pageSizeOptions]="pageSizeOptions" 
+                            (page)="paginationEvent($event)">
+            </mat-paginator>
             </div>
 
 
