--- a/src/app/test/pagination/pagination.component.html
+++ b/src/app/test/pagination/pagination.component.html
@@ -12,40 +12,61 @@
 
 
             <div class="example-container mat-elevation-z8">
-              <div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
-                <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-                <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-                  GitHub's API rate limit has been reached. It will be reset in one minute.
+              <div class="example-loading-shade" *ngIf="isError">
+                <!-- <mat-spinner *ngIf="isLoadingResults"></mat-spinner> -->
+                <div class="example-rate-limit-reached">
+                  {{errorMessage}}
                 </div>
               </div>
-
+              <div>
+                
+              </div>
+              <!-- <mat-form-field class="ml-4 border">
+               
+                  <input matInput placeholder="Searching">
+                  <div class="ml-3 border"></div>
+                  <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2">Button</button>
+             
+              
+              </mat-form-field> -->
               <div class="example-table-container">
-
+                <div class="example-button-row">
+                    <mat-form-field class="ml-3">
+                        <input matInput id="inputSearch" (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                      </mat-form-field>&nbsp;
+                  <!-- <button mat-stroked-button (click)="testing()">Searching</button> -->
+                </div>
                 <table mat-table [dataSource]="dataSource">
                   <!-- Number Column -->
                   <!-- Title Column -->
-                  <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef>name</th>
-                    <td mat-cell *matCellDef="let row">{{row.name}}</td>
+                  <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>id</th>
+                    <td mat-cell *matCellDef="let row">{{row.id}}</td>
                   </ng-container>
 
                   <!-- State Column -->
+                  <ng-container matColumnDef="first_name">
+                    <th mat-header-cell *matHeaderCellDef>first_name</th>
+                    <td mat-cell *matCellDef="let row">{{row.first_name}}</td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="last_name">
+                    <th mat-header-cell *matHeaderCellDef>last_name</th>
+                    <td mat-cell *matCellDef="let row">{{row.last_name}}</td>
+                  </ng-container>
+
                   <ng-container matColumnDef="email">
-                    <th mat-header-cell *matHeaderCellDef>email</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      email
+                    </th>
                     <td mat-cell *matCellDef="let row">{{row.email}}</td>
                   </ng-container>
 
-                  <ng-container matColumnDef="id">
-                      <th mat-header-cell *matHeaderCellDef>id</th>
-                      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-                    </ng-container>
-
-                  <!-- Created Column -->
-                  <ng-container matColumnDef="body">
+                  <ng-container matColumnDef="gender">
                     <th mat-header-cell *matHeaderCellDef>
-                        body 
+                      gender
                     </th>
-                    <td mat-cell *matCellDef="let row">{{row.body}}</td>
+                    <td mat-cell *matCellDef="let row">{{row.gender}}</td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -54,11 +75,8 @@
                 </table>
               </div>
 
-              <mat-paginator [length]="length" 
-                            [pageSize]="pageSize" 
-                            [pageSizeOptions]="pageSizeOptions" 
-                            (page)="paginationEvent($event)">
-            </mat-paginator>
+              <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" (page)="paginationEvent($event)">
+              </mat-paginator>
             </div>
 
 
