--- a/src/app/otorisasihead/otorisasi-rekening-konfidensial/otorisasi-rekening-konfidensial.component.html
+++ b/src/app/otorisasihead/otorisasi-rekening-konfidensial/otorisasi-rekening-konfidensial.component.html
@@ -9,6 +9,10 @@
         <mdb-card>
           <mdb-card-body>
 
+            <mat-form-field>
+              <input type="text" matInput [formControl]="myControl">
+            </mat-form-field>
+
             <table mdbTable>
               <thead>
                 <tr>
