--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -9,16 +9,22 @@
           <!-- Default form contact -->
           <div class="card">
             <div class="card-body">
+
               <!-- <form> -->
+
+
               <table class="table table-sm table-striped table-hover table-bordered" style="height:25px; text-align:center;">
                 <thead class="thead-light">
                   <tr>
                     <th class="col-form-label pr-0 font-weight-bold" style="width:4%;line-height: 1.2">User ID</th>
                     <th class="col-form-label pr-0 font-weight-bold" style="width:20%;line-height: 1.2">Nama</th>
-                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Login Terakhir</th>
-                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Logout Terakhir</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Login
+                      Terakhir</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Logout
+                      Terakhir</th>
                     <th class="col-form-label pr-0 font-weight-bold" style="width:8%;line-height: 1.2">Status</th>
-                    <th class="col-form-label pr-0 font-weight-bold" style="width:10%;line-height: 1.2">Kode Departemen</th>
+                    <th class="col-form-label pr-0 font-weight-bold" style="width:10%;line-height: 1.2">Kode
+                      Departemen</th>
                     <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Pilih Proses</th>
                   </tr>
                   <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;"
@@ -52,6 +58,7 @@
                 <button type="button" class="btn btn-primary btn-rounded">Keluar</button>
               </div>
               <!-- </form> -->
+
             </div>
           </div>
           <br>
