--- a/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
+++ b/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
@@ -8,73 +8,78 @@
 
         <mdb-card>
           <mdb-card-body>
-
-            <!--input 1-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
-              <label class="col-form-label pr-0 font-weight-bold">:</label>
-              <div class="col-3 form-inline">
-                <div class="input-group">
-                  <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
-                  <mat-datepicker #picker></mat-datepicker>
-                  <div class="input-group-append">
-                    <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
-                  </div>
+            <form [formGroup]="validatingForm">
+              <!--input 1-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
+                <label class="col-form-label pr-0 font-weight-bold">:</label>
+                <div class="col-3 form-inline">
+                  <input class="form-control" value="{{tanggal | date:'dd/MM/yyyy'}}" id="inputTanggal" disabled>
                 </div>
               </div>
-            </div>
-            <!--input1-->
-            <!--input 2-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 2-->
-            <!--input 3-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3">
-                <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
-                  <option selected>Pilih Salah Satu</option>
-                  <option value="1">IDR</option>
-                  <option value="2">USD</option>
-                  <option value="3">YEN</option>
-                </select>
+              <!--input1-->
+              <!--input 2-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input type="text" class="form-control" id="inputNoReferensi"></div>
+                <span class="col-6"></span>
               </div>
-            </div>
-            <!--input 3-->
-            <!--input 4-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 4-->
-            <!--input 5-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <label class="col-2 col-form-label  font-weight-bold">DC</label>
-              <span class="col-6"></span>
-            </div>
-            <!--input 5-->
-            <!--input 6-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <span></span>
-              <div class="col-4"><textarea rows="4" cols="50" class="form-control"></textarea></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 6-->
-            <div class="d-flex justify-content-center">
-              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-            </div>
+              <!--input 2-->
+              <!--input 3-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3">
+                  <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang" id="MataUang">
+                    <option selected disabled>Pilih Salah Satu</option>
+                    <option value="idr">IDR</option>
+                    <option value="usd">USD</option>
+                    <option value="yen">YEN</option>
+                  </select>
+                </div>
+                <p class="col-6 text-danger" *ngIf="inputMataUang.invalid && (inputMataUang.dirty || inputMataUang.touched)">Mohon
+                  Pilih Salah Satu Mata Uang</p>
+              </div>
+              <!--input 3-->
+              <!--input 4-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input mdbInput mdbValidate currencyFormat data-symbol="Rp." type="text" min="10000"
+                    class="form-control" id="nilaiTransaksi" minlength="9" formControlName="nilaiTransaksi"></div>
+                <p class="col-6 text-danger" *ngIf="nilaiTransaksi.invalid && (nilaiTransaksi.dirty || nilaiTransaksi.touched)">Mohon
+                  Masukan Nilai Transaksi(*minimum Rp.10Rb)</p>
+              </div>
+              <!--input 4-->
+              <!--input 5-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label  font-weight-bold">DC</label>
+                <span class="col-6"></span>
+              </div>
+              <!--input 5-->
+              <!--input 6-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <span></span>
+                <div class="col-4"><textarea rows="4" cols="50" class="form-control" id="inputKeterangan"></textarea></div>
+                <span class="col-6"></span>
+              </div>
+              <!--input 6-->
+              <div class="d-flex justify-content-center">
+                <button type="button btn-md" mdbBtn color="primary" *ngIf="inputMataUang.invalid || nilaiTransaksi.invalid"
+                  mdbWavesEffect disabled> <i class="fa fa-refresh" aria-hidden="true"></i> Proses</button>
+                <button type="button btn-md" mdbBtn color="primary" *ngIf="inputMataUang.valid && nilaiTransaksi.valid"
+                  mdbWavesEffect (click)="proses()"> <i class="fa fa-refresh" aria-hidden="true"></i> Proses</button>
+                <button type="button btn-md" mdbBtn color="primary" [routerLink]="['/']" routerLinkActive="router-link-active"
+                  mdbWavesEffect>
+                  <i class="fa fa-reply" aria-hidden="true"></i> Kembali
+                </button>
+              </div>
+            </form>
           </mdb-card-body>
         </mdb-card>
 
