--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,155 +1,4 @@
 <!--Main layout-->
+<div class="bodyDashboard position-fixed">
 
-<div class="dashboard position-fixed">
-  <!-- <div class="d-flex flex-column h-100">
-    <div id="outer" class="d-flex flex-column flex-grow"> -->
-  <div class="card dashboard-body">
-    <div class="card-body">
-
-
-    </div>
-  </div>
-  <!-- </div>
-  </div> -->
 </div>
-<!--Main layout-->
-
-
-<!-- Default form contact -->
-
-<!-- Start your project here-->
-<!-- <div class="d-flex flex-column h-100">
-    <div id="outer" class="d-flex flex-column flex-grow">
-      <div class="card konten">
-        <div class="card-body">
-          <h3 class="card-title" style="text-align: center">Home Page Application</h3>
-          <h3> Link Khusus untuk test halaman </h3>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Administrative
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/administrator/daftaruser']">Daftar User</a>
-              <a class="dropdown-item" [routerLink]="['/administrator/webbranchstatus']">WebBranch</a>
-              <a class="dropdown-item" [routerLink]="['/administrator/tglbisnis']">Pengaturan Tanggal Bisnis</a>
-              <a class="dropdown-item" [routerLink]="['/administrator/aktifitasuser']">Daftar Aktifitas User</a>
-              <a class="dropdown-item" [routerLink]="['/administrator/upload']">Upload Transaksi</a>
-              <a class="dropdown-item" [routerLink]="['/administrator/offlinelimit']">Change Offline Limit</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Teller In
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/tellerin/tellerin']">Teller In</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/setorantunai']">Setoran Tunai</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/penarikantunai']">Penarikan Tunai</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/selisihkas']">Selisih Kas</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/sinkronfin']">Sinkron Fin</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/pindahbuku']">Pindah Buku</a>
-              <a class="dropdown-item" [routerLink]="['/tellerin/pinbukbedauang']">Pindah Buku Beda Uang</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Maintenance
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/maintenance/caribaruuser']">Pencarian user</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/gantisandi']">Ganti Sandi</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/kontroluser']">Kontrol User</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/tutupuser']">Tutup User</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/gantisandioveride']">Ganti Sandi Over Ride</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/role']">Pencarian Role</a>
-              <a class="dropdown-item" [routerLink]="['/maintenance/refresh']">Refresh User</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Nasabah
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru -
-                Corporate</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabahindvl']">Duplikat Cek Nasabah Baru -
-                Individual</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasaba Baru - Corporate</a>
-              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasaba Baru - Individual</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Kartu
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/kartu/carikartuatm']">Pencarian Kartu ATM</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Pembayaran
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/pembayaran/bayarpkb']">Pembayaran PKB</a>
-              <a class="dropdown-item" [routerLink]="['/pembayaran/bayarmpn']">Pembayaran MPN</a>
-              <a class="dropdown-item" [routerLink]="['/pembayaran/billpayment']">Pembayaran Bill Payment</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              PassBook
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/passbook/ctkpassbook']">Cetak PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/passbook/hdrpassbook']">Cetak Header PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/passbook/ulangpassbook']">Cetak Ulang Header PassBook</a>
-              <a class="dropdown-item" [routerLink]="['/passbook/checktaspen']">Check Taspen</a></div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Cash Drawer
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/cashdrawer/denominasi']">Denominasi</a>
-              <a class="dropdown-item" [routerLink]="['/cashdrawer/balancing']">Balancing</a>
-              <a class="dropdown-item" [routerLink]="['/cashdrawer/sinkronisasi']">Sinkronisasi</a>
-            </div>
-          </div>
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Rekening Koran
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/rekening/cetak']">Cetak Rekening Koran</a>
-              <a class="dropdown-item" [routerLink]="['/rekening/daftar']">Daftar Rekening Koran</a>
-            </div>
-          </div>
-
-
-          <div class="btn-group" mdbDropdown>
-            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-              Cash Drawer Head Teller
-            </button>
-            <div class="dropdown-menu dropdown-primary">
-              <a class="dropdown-item" [routerLink]="['/cashdrawerhead/daftarsaldo']">Daftar Saldo Kas Cabang</a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div> -->
-<!-- /Start your project here-->
