--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -35,9 +35,9 @@
         <h5>{{pesanLogin}}</h5>
       </div>
       <!--Footer-->
-      <div class="modal-footer justify-content-center">
+      <!-- <div class="modal-footer justify-content-center">
         <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a>
-      </div>
+      </div> -->
     </div>
     <!--/.Content-->
   </div>
