--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,5 +1,5 @@
-<main ng-app="myApp">
-
+<!-- <main ng-app="myApp"> -->
+<div class="login">
   <div class="card">
     <div class="card-body">
       <div class="card-title">
@@ -18,7 +18,10 @@
       </div>
     </div>
   </div>
-</main>
+</div>
+
+
+<!-- </main> -->
 
 <!--bagian modal untuk pesan login-->
 <div mdbModal #basicModal="mdbModal" class="modal fade modal-notify modal-danger" tabindex="-1" role="dialog">
