--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -1,3 +1,10 @@
+<!--Main layout-->
+<div class="bodyContent">
+    <!-- Start your project here-->
+    <div id="outer" class="d-flex flex-column">
+      <div class="card konten">
+        <div class="card-body">
+
 <!--Panel Atas 1-->
 <mdb-card class="mb-3">
   <mdb-card-body>
@@ -181,3 +188,8 @@
   </mdb-card-body>
 </mdb-card>
 <!--Panel isi konten dari menu tabs-->
+
+</div>
+</div>
+</div>
+</div>
