--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,13 @@
 
 /* ====================================================== */
 
-html {
+/* html {
   min-height: 100%;
   min-width: 100%;
   height: 100%;
   width: 100%;
   z-index: 0;
-}
+} */
 
 body {
   background-image: url(assets/image/material-img/backgroundWb.png);
@@ -26,14 +26,14 @@ body {
   z-index: 0;
 }
 
-body::after {
+body::before {
   content: '';
   display: block;
   width: 63%;
   height: 100%;
   background-image: linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
   position: absolute;
-  z-index: 1;
+  z-index: 0;
 }
 
 header {
@@ -47,7 +47,7 @@ header {
 
 
 
-main {
+/* main {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -56,7 +56,19 @@ main {
   min-width: 100%;
   height: 100%;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
+} */
+
+.login {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
 }
 
 
@@ -175,7 +187,7 @@ h5.card-title {
   width: 100%;
   height: 100%;
   margin-top: 100px;
-  z-index: 2;
+  /* z-index: 2; */
   background-image: url(/src/assets/image/material-img/backgrounddashboard.png);
   background-repeat: no-repeat;
   background-position: center;
