--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -1,6 +1,6 @@
 <!-- Header 1 / Logo / Panel / Logout -->
-<header class="navbar fixed-top justify-content-center align-items-center" style="z-index: 1039;">
-
+<header class="navbar fixed-top justify-content-center align-items-center">
+  <!-- style="z-index: 1039;" -->
   <!-- Logo -->
   <div class="container-fluid">
     <div class="row">
@@ -257,37 +257,3 @@
 
   </nav>
 </header>
-
-<!-- <div class="container-fluid d-flex align-items-stretch" id="header"> -->
-<!-- <div style="width: 27%">
-
-    </div> -->
-
-<!-- <div style="width: 14%">
-      <div class="row text-right" style="position: absolute;top: 30px;">
-        <ul style="list-style-type: none; font-size:1vw;">
-          <li class="text-light">
-            <h6>Selamat Datang</h6>
-          </li>
-          <li class="font-weight-bold text-info">
-            Jateng SP | Jateng SP
-          </li>
-        </ul>
-      </div>
-    </div> -->
-<!-- </div> -->
-
-<!-- <nav class="col d-flex justify-content-center" style="margin-top: 15px;">
-      <a class="nav-link active" [routerLink]="['/user/bob']">Administrative</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Report</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">User Maintenance</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Pembayaran</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Rekening</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Kartu</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Rekening Koran</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Cash Drawer Teller</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">PassBook</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Otorisasi Head CS</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Cash Drawer</a>
-      <a class="nav-link active" [routerLink]="['/user/bob']">Nasabah</a>
-    </nav> -->
